--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>4.2.1</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary</artifactId>
+            <version>1.0.14</version>
+        </dependency>
     </dependencies>
 
     <build>
