--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+cloudinary.cloud-name=${cloudinary_cloud_name}
+cloudinary.api-key=${cloudinary_api_key}
+cloudinary.api-secret=${cloudinary_api_secret}
