--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>cloudinary</artifactId>
             <version>1.0.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
